# duckhts

./: .gitignore  404.html  AGENTS.md  Benchmark.Rmd  Benchmark.md  CMakeLists.txt  Dockerfile.webr-test  LICENSE-text.html  LICENSE-text.md  Makefile  NEWS.md  PLAN.md  README.Rmd  README.md  SPEC.md  authors.html  authors.md  description.yml  functions.yaml  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  vcpkg.json
.github/: PLAN.md  SPEC.md
.github/workflows/: MainDistributionPipeline.yml  cran-check.yml  pkgdown.yml  r-universe-sync.yaml  r-universe-sync.yml  rUniverse-sync.yaml  test.yml
.tmp/: hts_sha256.txt
news/: index.html  index.md
r/Rduckhts/: .Rbuildignore  .gitignore  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  bootstrap.R  cleanup  cleanup.win  configure  configure.win  test_installation.R
r/Rduckhts/R/: bootstrap.R  duckhts.R
r/Rduckhts/inst/: COPYRIGHT  WORDLIST
r/Rduckhts/inst/duckhts_extension/: bam_reader.c  bcf_reader.c  duckhts.c  hts_index_builder.c  hts_meta_reader.c  kmer_udf.c  tabix_reader.c
r/Rduckhts/inst/duckhts_extension/duckdb_capi/: duckdb.h  duckdb_extension.h
r/Rduckhts/inst/duckhts_extension/include/: vcf_types.h  vep_parser.h
r/Rduckhts/inst/extdata/: header_tabix.tsv.gz.tbi  meta_tabix.tsv.gz.tbi
r/Rduckhts/inst/function_catalog/: functions.md  functions.tsv  functions.yaml
r/Rduckhts/inst/patches/: duckdb_capi_strict_prototypes.patch
r/Rduckhts/inst/tinytest/: test_basic.R  test_cigar_utils.R  test_indexes_bgzip.R  test_integration.R  test_intervals.R  test_type_mappings.R
r/Rduckhts/man/: Rduckhts.Rd  detect_complex_types.Rd  duckdb_type_mappings.Rd  duckhts_append_metadata.Rd  duckhts_bootstrap.Rd  duckhts_build.Rd  duckhts_detect_platform.Rd  extract_array_element.Rd  extract_map_data.Rd  normalize_tabix_types.Rd  rduckhts_bam.Rd  rduckhts_bam_index.Rd  rduckhts_bcf.Rd  rduckhts_bcf_index.Rd  rduckhts_bed.Rd  rduckhts_bgunzip.Rd  rduckhts_bgzip.Rd  rduckhts_fasta.Rd  rduckhts_fasta_index.Rd  rduckhts_fasta_nuc.Rd  rduckhts_fastq.Rd  rduckhts_functions.Rd  rduckhts_gff.Rd  rduckhts_gtf.Rd  rduckhts_hts_header.Rd  rduckhts_hts_index.Rd  rduckhts_hts_index_raw.Rd  rduckhts_hts_index_spans.Rd  rduckhts_load.Rd  rduckhts_tabix.Rd  rduckhts_tabix_index.Rd  setup_hts_env.Rd
r/Rduckhts/tests/: tinytest.R
r/Rduckhts/tools/: append_extension_metadata.R  bootstrap.R
r/duckhts/: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  bootstrap.R
r/duckhts/R/: bootstrap.R
r/duckhts/inst/duckhts_extension/: seq_reader.c  tabix_reader.c  vep_parser.c
r/duckhts/inst/duckhts_extension/htslib/test/tabix/: vcf_file.bcf.csi
r/duckhts/man/: duckhts_load.Rd
reference/: Rduckhts-package.html  Rduckhts.html  Rduckhts.md  detect_complex_types.html  detect_complex_types.md  duckdb_type_mappings.html  duckdb_type_mappings.md  duckhts_append_metadata.html  duckhts_append_metadata.md  duckhts_bootstrap.html  duckhts_bootstrap.md  duckhts_build.html  duckhts_build.md  duckhts_detect_platform.html  duckhts_detect_platform.md  duckhts_load.html  duckhts_load.md  extract_array_element.html  extract_array_element.md  extract_map_data.html  extract_map_data.md  index.html  index.md  normalize_tabix_types.html  normalize_tabix_types.md  rduckhts_bam.html  rduckhts_bam.md  rduckhts_bcf.html  rduckhts_bcf.md  rduckhts_fasta.html  rduckhts_fasta.md  rduckhts_fasta_index.html  rduckhts_fasta_index.md  rduckhts_fastq.html  rduckhts_fastq.md  rduckhts_functions.html  rduckhts_functions.md  rduckhts_gff.html  rduckhts_gff.md  rduckhts_gtf.html  (+15 more)
scripts/: benchmark_bin_counts_sql.sh  parse_vep_vcf.R  render_function_catalog.py  vendor_all.sh  vendor_bcftools.sh  vendor_cgranges.sh  vendor_common.sh  vendor_conformance_data.sh  vendor_htslib.sh  vendor_samtools.sh
src/: bam_reader.c  bcf_reader.c  bgzip.c  duckhts.c  hts_meta_reader.c  interval_udf.c  kmer_udf.c  seq_reader.c  tabix_reader.c
test/data/: formatcols.vcf.gz.csi  gff_file.gff.gz.tbi  mate_mismatch_r1.fq  mate_mismatch_r2.fq  no_contig.vcf.gz.tbi  odd_interleaved.fq  rg.sam.gz.csi  rg.sam.gz.tbi  targets.bed
test/docker/: Dockerfile.musl
test/scripts/: prepare_test_data.sh
test/sql/: duckhts.test
